# flappybird

./: README.md  setup.cfg
src/flappybird/: __init__.py  __main__.py
