[metadata]
name = flappybird
version = 0.1.1
description = Flappy bird, but every sprite is its own window.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/flappybird
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed

[options]
packages = find:
install_requires =
    pygame>=2.5.2
python_requires = >=3.8
package_dir = =src

[options.packages.find]
where = ./src

[options.extras_require]
dev =
    black
    mypy

[options.package_data]
flappybird =
    assets/*
    py.typed

[options.entry_points]
console_scripts =
    flappybird=flappybird:main

[tool:pytest]
addopts = --cov --cov-report=term-missing
